# remote_pi

./: .gitignore  CHANGELOG.md  CLAUDE.md  PROTOCOL.md  README.md
.github/workflows/: app-release.yml  cockpit-release.yml
app/: .gitignore  pubspec.yaml  store_listing.md
app/ios/: ExportOptions.plist  Podfile
app/lib/: main.dart
app/test/: protocol_test.dart
branding/: README.md
cockpit/: .gitignore  CHANGELOG.md  distribute_options.yaml  pubspec.yaml
cockpit/linux/: CMakeLists.txt  work.jacobmoura.cockpit.metainfo.xml
cockpit/packaging/: README.md
pi-extension/: CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
pi-schedule/: LICENSE  package.json  tsconfig.json
plan/: 01-bootstrap.md  03-protocol.md  22-site-mvp.md  24-mesh-membership.md  25-pc-mesh-bootstrap.md  27-pre-publish-cycle.md  38-mesh-structured-identity.md  40-windows-supervisor.md  41-room-per-cwd-name.md  42-cockpit-worktrees.md  43-cockpit-packaging.md  44-app-android-apk-release.md  44-pi-schedule-extension.md  46-cockpit-av-preview.md
relay/: .gitignore  Cargo.toml  Dockerfile  README.md  push-docker.sh
relay/migrations/: 001_mesh_versions.sql
relay/src/: lib.rs  main.rs
relay/src/handlers/: peer.rs
relay/src/mesh/: handler.rs  mod.rs  store.rs  types.rs  verify.rs
relay/src/peers/: registry.rs
relay/tests/: mesh_test.rs
relay/tests/common/: mod.rs
rp-s3/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  push-docker.sh
rp-s3/src/: main.rs
scripts/: cmux-dispatch.sh
site/: README.md  package.json
(+240 files in other folders)
