[package]
name = "rp-s3"
version = "0.1.0"
edition = "2021"
description = "Servidor de downloads do Remote Pi — serve artefatos e latest.json a partir de um volume"
license = "LicenseRef-proprietary"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
